--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "this for learning and projects purpose, feel free to contribute",
   "main": "index.js",
   "scripts": {
+    "serve": "webpack serve",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,6 +28,7 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
+    "@babel/plugin-transform-runtime": "^7.16.0",
     "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.4.0",
